--- a/.github/workflows/basic.yaml
+++ b/.github/workflows/basic.yaml
@@ -1,7 +1,7 @@
 
 name: JFR Setup
 on:
-  workflow_dispatch:on: push
+  workflow_dispatch
 jobs:
   jenkinsfile-runner-prepackaged:
     runs-on: ubuntu-latest
@@ -9,3 +9,4 @@ jobs:
     - uses: actions/checkout@master
     - name: jenkinsfile-runner-prepackaged
       uses: jenkinsci/jenkinsfile-runner-github-actions/jenkinsfile-runner-prepackaged@master
+     
